# flambda

./: .gitignore  Dockerfile  README.md  pyproject.toml  tasks.py
app/: app.py  main.py
app/core/: auth.py  cognito.py
app/routes/v1/: api.py  users.py
app/templates/: index.html
glue/: nlp-play-tidy-etl.py
notebooks/: eda.ipynb
