[tool.poetry]
name = "fast-lambda"
version = "0.1.0"
description = ""
authors = ["Josh Peak <neozenith.dev@gmail.com>"]
license = "MIT"


[tool.poetry.dependencies]
python = ">=3.9,<3.11"
fastapi = {extras = ["all"], version = "^0.75.1"}
mangum = "^0.14.1"
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
python-dotenv = "^0.20.0"
plotly = "^5.9.0"
pandas = "^1.4.3"
awswrangler = "^2.16.1"

[tool.poetry.dev-dependencies]
invoke = "^1.7.0"
black = {extras = ["jupyter"], version = "^22.6.0"}
boto3 = "^1.21.40"
invoke-common-tasks = {version = "^0.3.2", extras = ["all"]}
jupyterlab = "^3.4.3"
sagemaker = "^2.97.0"
pipdeptree = "^2.2.1"
scikit-learn = "^1.1.1"
torch = "^1.12.0"
transformers = "^4.20.1"
ipywidgets = "^7.7.1"
datasets = {extras = ["s3"], version = "^2.3.2"}


[tool.black]
line-length = 120

[tool.isort]
profile = "black"
multi_line_output = 3
import_heading_stdlib = "Standard Library"
import_heading_firstparty = "Our Libraries"
import_heading_thirdparty = "Third Party"

[tool.mypy]
exclude = ["tests/", "tasks\\.py"]
pretty = true
show_error_codes = true
show_column_numbers = true
show_error_context = true
ignore_missing_imports = true
follow_imports = "silent"
disallow_incomplete_defs = true
disallow_untyped_defs = false
strict = false

[tool.pytest]
[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-s -vvv --color=yes --cov=. --no-cov-on-fail"

[tool.coverage]
[tool.coverage.run]
branch = true
omit = ["tests/*", "**/__init__.py", "tasks.py"]
[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
